Fix #5851 "Don't let buttons overflow grids"

--- a/form-runner/jvm/src/main/assets/xbl/orbeon/grid/grid.less
+++ b/form-runner/jvm/src/main/assets/xbl/orbeon/grid/grid.less
@@ -444,6 +444,13 @@
             .fr-grid-td {
                 .xforms-trigger button, .xforms-trigger input { margin-top: 1.72em } // hand-tuned so it appears at about the same pos as input fields
                 .xforms-trigger button, .yui-button .xforms-trigger input { margin-top: 0 } // except YUI buttons don't appear right with top margin!
+
+                // Try not to allow buttons to go over the width of a cell
+                .xforms-trigger-appearance-full button {
+                    max-width: 100%;
+                    word-wrap: break-word;
+                    white-space: break-spaces;
+                }
             }
         }
 
